# freemusicdemixer.com

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  gulpfile.js  package-lock.json  package.json
.github/: results.txt
cmake/: FindEigen3.cmake
docs/: 404.md  CNAME  Gemfile  _config.yml  about.md  banner.js  blog.js  blog.md  demucs.js  demucs.wasm  demucs_free.js  demucs_free.wasm  demucs_free_v3.js  index.html  index.js  index.md  karaoke.md  main.js  main_v1.js  main_v2.js  main_v3.js  pro.md  robots.txt  service-worker.js  sponsors.md  umx.js  umx.wasm  umx_v1.js  umx_v1.wasm  worker.js  worker_v1.js  worker_v2.js
docs/_includes/: head-custom-analytics.html  head-custom-google-analytics.html  head-custom.html  robots.txt
docs/_layouts/: default.html  post.html
docs/_posts/: 2023-09-23-Beginners-guide-to-free-stems.md  2023-10-23-How-freemusicdemixer-works.md  2023-11-24-Music-demixing-terminology.md  2023-12-08-Demucs-has-landed.md  2024-01-15-Demucs-faster.md  2024-02-17-Pro-site-launch.md  2024-02-23-Demucs-segmentation.md  2024-05-13-Demucs-v3-spring.md
docs/assets/css/: style.scss  style_v3.scss
examples/file_demixer/: file_demixer.cpp
js/: app-refactor.js  app.js  app_refactor.js  basicpitch_worker.js  blog.js  main.js  midi-worker.js  service-worker.js  stem-worker.js  worker.js
scripts/: compare-torch-stft.py  convert-demucs-pth-to-ggml.py  convert-umx-pth-to-ggml.py  demucs_pytorch_inference.py  evaluate-demixed-output.py  requirements.txt  umx_pytorch_inference.py
src/: dsp.cpp  dsp.hpp  inference.cpp  inference.hpp  lstm.cpp  lstm.hpp  model.cpp  model.hpp  tensor.hpp  wasm_glue.cpp  wiener.cpp  wiener.hpp
src-demucs/: conv.hpp  crosstransformer.cpp  crosstransformer.hpp  dsp.cpp  dsp.hpp  encdec.cpp  encdec.hpp  layers.cpp  layers.hpp  model.hpp  model_apply.cpp  model_inference.cpp  model_load.cpp  tensor.hpp  wasm_glue.cpp
src-umx/: dsp.hpp  inference.hpp  model.cpp  model.hpp  wasm_glue.cpp  wiener.cpp
test/: e2e_test.sh
web/: 404.md  Gemfile  WavFileEncoder.js  _config.yml  about.md  android.md  app-refactor.js  app.js  app_refactor.js  banner.js  basicpitch.js  basicpitch.wasm  basicpitch_mxml.js  basicpitch_mxml.wasm  basicpitch_worker.js  blog.js  blog.md  competitors.md  demucs_deluxe.js  demucs_deluxe.wasm  demucs_free.js  demucs_free.wasm  demucs_free_v3.js  demucs_free_v3.wasm  demucs_karaoke.js  demucs_karaoke.wasm  demucs_onnx_simd.js  demucs_onnx_simd.wasm  demucs_pro.js  demucs_pro.wasm  faqs.md  index.md  ios.md  karaoke.md  login.js  main.js  midi-worker.js  midi.md  pricing.md  private-ai.md  (+13 more)
web/_includes/: admonitions.html  head-custom-analytics.html  head-custom.html  robots.txt
web/_layouts/: default.html  post.html  redesign.html
web/_plugins/: env_vars.rb
web/_posts/: 2023-09-23-Beginners-guide-to-free-stems.md  2023-12-08-Demucs-has-landed.md  2024-01-15-Demucs-faster.md  2024-02-17-Pro-site-launch.md  2024-05-13-Demucs-v3-spring.md  2024-06-24-Merging-free-and-pro.md  2024-08-17-Switching-to-yearly-billing.md  2024-08-24-Vocal-remover-extract-vocals.md  2024-08-31-Separate-music-instrumental-breakdowns-AI.md  2024-09-20-How-to-pick-max-memory.md  2024-11-17-New-music-transcription-midi.md  2024-12-07-Music-transcription-feature.md  2024-12-23-Piano-guitar-quality-efficiency.md  2025-01-01-Create-demo-tracks-stems.md  2025-01-13-New-feature-printable-sheet-music.md  2025-03-09-Audio-to-sheet-music.md  2025-03-09-Convert-youtube-mp3-to-sheet-music.md  2025-04-01-Mobile-now-supported.md
web/assets/css/: redesign.scss  style.scss
web/functions/: getprocontent.js  sendmobileemail.js
